--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ a, a:visited { color : #0050e7; }
 			I am a Ph.D. student at the <a href="https://www.mmlab-ntu.com/">MMLab@NTU</a> advised by Prof. <a href="https://www.mmlab-ntu.com/person/ccloy/">Chen Change Loy</a> and Dr. <a href="https://daibo.info/">Bo Dai</a> (2021-now). Previously, I completed my Master's degree from <a href="https://www.ucdavis.edu/">UC Davis</a> advised by Prof. <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> (2018-2020), and my Bachelor's degree from <a href="https://en.nankai.edu.cn/">Nankai University</a> advised by Prof. <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a> (2014-2018). I have also spent a year at the Tencent Youtu Lab working as a research intern (2020-2021).
 	        <br>
             <br>
-	        I am broadly interested in computer vision and related problems in machine learning. My previous research focuses on instance segmentation and pedestrian detection. Currently, I'm particularly interested in the eﬃcient adaptation and deployment of foundation models.
+	        I am broadly interested in computer vision and related problems in machine learning. My previous research focuses on instance segmentation and object detection. Currently, I'm particularly interested in foundation model optimization.
 		</p>
 	</div>
 
@@ -124,8 +124,7 @@ a, a:visited { color : #0050e7; }
             <img src="./homepage_files/edgesam_logo.jpeg" class="publogo" width="200 px">
             <p>
                 <strong>
-<!--                    <a href="https://arxiv.org/abs/">EdgeSAM: Prompt-In-the-Loop Distillation for On-Device Deployment of SAM</a>-->
-                    EdgeSAM: Prompt-In-the-Loop Distillation for On-Device Deployment of SAM
+                   <a href="https://arxiv.org/abs/2312.06660">EdgeSAM: Prompt-In-the-Loop Distillation for On-Device Deployment of SAM</a>
                 </strong>
                 <br>
                 <br>
