--- a/index.html
+++ b/index.html
@@ -148,6 +148,30 @@ a, a:visited { color : #0050e7; }
         <br>
         <br>
         <div class="publication">
+            <img src="./homepage_files/ovsam_logo.png" class="publogo" width="200 px">
+            <p>
+                <strong>
+                   <a href="https://arxiv.org/abs/2401.02955">Open-Vocabulary SAM: Segment and Recognize Twenty-thousand Classes Interactively</a>
+                </strong>
+                <br>
+                <br>
+                Haobo Yuan, Xiangtai Li, <b>Chong Zhou</b>, Yining Li, Kai Chen, Chen Change Loy.
+                <br>
+                <!-- <em>European Conference on Computer Vision (ECCV), 2022 <font color="#e86e14">(Oral)</font> </em> -->
+                <em> arXiv preprint, 2024 </em>
+                <br>
+                <span class="links">
+                     <a href="https://arxiv.org/abs/2401.02955">arXiv</a>
+                     <a href="https://www.mmlab-ntu.com/project/ovsam/">Project Page</a>
+                     <a href="https://github.com/HarborYuan/ovsam">Code</a>
+                </span>
+            </p>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="publication">
             <img src="./homepage_files/unify_logo.png" class="publogo" width="200 px">
             <p> 
                 <strong>
@@ -175,6 +199,29 @@ a, a:visited { color : #0050e7; }
 
 	<div class="container">
 		<h2>Publications</h2>
+        <br>
+        <div class="publication">
+            <img src="./homepage_files/rubik_logo.png" class="publogo" width="200 px">
+            <p> 
+                <strong>
+                    <a href="https://openreview.net/pdf?id=hOOOvOMok5">Rubik's Cube: High-Order Channel Interactions with a Hierarchical Receptive Field</a>
+                </strong>
+                <br>
+                <br>
+                Naishan Zheng, Man Zhou, <b>Chong Zhou</b>, Chen Change Loy.
+                <br>
+                <em>Advances in Neural Information Processing Systems (NeurIPS), 2023</em>
+                <!-- <em> arXiv preprint, 2021 </em> -->
+                <br>
+                <span class="links">
+                    <a href="https://openreview.net/pdf?id=hOOOvOMok5">PDF</a>
+                    <a href="https://github.com/zheng980629/RubikCube">Code</a>
+                </span>
+            </p>
+        </div>
+        <br>
+        <br>
+        <br>
         <br>
         <div class="publication">
             <img src="./homepage_files/maskclip_logo.jpg" class="publogo" width="200 px">
@@ -302,76 +349,54 @@ a, a:visited { color : #0050e7; }
         <br>
     </div>
 
-    <!-- <div class="container">
-    	<h2>Talks</h2>
-    	<div>
-    		<p>
-            <br>
-            2020 @ ACM MM: <em><a href="./papers/openworldhuman_slides.pdf">Sensing, Understanding and Synthesizing Humans in an Open World</a></em>
-            <br>
-            <br>
-            2019 @ ICCV: <em><a href="./papers/diversehuman_slides.pdf">Learning Diverse Human Representation in the Wild</a></em>
-            <br>
-            <br>
-            2019 @ VALSE: <em><a href="./papers/glimpseofdetectron_slides.pdf">The Glimpse of Detectron: Dynamic Forwarding and Routing in Modern Detectors</a></em>
-            <br>
-            <br>
-            2018 @ Berkeley: <em><a href="./papers/videoparsing_slides.pdf">Learning Video Parsing, Tracking and Synthesis in the Wild</a></em>
-            <br>
-            <br>
-    		2017 @ VALSE: <em><a href="./papers/humancentric_slides.pdf">Deep Learning Human-centric Representation in the Wild</a></em>
-    		<br>
-    		<br>
-            2016 @ Google: <em><a href="./papers/deepfashion_slides.pdf">Deep Fashion Understanding</a></em>
-    		<br>
-    		<br>
-    		2015 @ CUHK: <em><a href="./papers/visualstructures_slides.pdf">Formulating Structure for Vision Problems</a></em>
-            <br>
-            <br>
-            2014 @ SIGGRAPH Asia: <em><a href="./papers/burstdenoising_slides.pdf">Fast Burst Images Denoising</a></em>
-            <br>
-            <br>
-            2013 @ HUST: <em><a href="./papers/microscopicimageseg_slides.pdf">Pathological Microscopic Image Segmentation (in Chinese)</a></em>
-   			</p>
-    	</div>
-    </div>
-
     <div class="container">
-    	<h2>Teaching</h2>
-    	<div>
-    		<p>
-    		<br>
-            FYP 16-17: <em><a href="./papers/pose2landmarks_poster.pdf">Fashion Landmark Detection</a></em>
-            <br>
-    		<br>
-            FYP 15-16: <em><a href="./papers/fashionattributes_poster.pdf">Fashion Attributes Prediction</a> and <a href="./papers/fashionstyle_poster.pdf">Style Transfer</a></em>
-            <br>
-            <br>
-    		FYP 14-15: <em>Face Attributes Recognition on Web Images</em>
-    		<br>
-    		<br>
-    		IERG 2600: <em>Technology, Society and Engineering Practice</em>
-    		<br>
-    		<br>
-    		IERG 3080: <em>Information & Software Engineering Practice</em>
-   			</p>
-    	</div>
+		<h2>Experiences</h2>
+        <br>
+        <div class="publication">
+            <img src="./homepage_files/meta_logo.png" class="publogo" width="200 px">
+            <p>
+                <strong>
+                    Research Scientist Intern @ Meta AI
+                </strong>
+                <br>
+                <br>
+                <em> July 2024 -  </em>
+                <br>
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="publication">
+            <img src="./homepage_files/shanghai_logo.png" class="publogo" width="200 px">
+            <p>
+                <strong>
+                   Research Intern @ Shanghai AI Laboratory
+                </strong>
+                <br>
+                <br>
+                <em> Jan 2024 - June 2024 </em>
+                <br>
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="publication">
+            <img src="./homepage_files/tencent_logo.jpg" class="publogo" width="200 px">
+            <p>
+                <strong>
+                   Research Intern @ Tencent Youtu Lab
+                </strong>
+                <br>
+                <br>
+                <em> Apr 2020 - May 2021 </em>
+                <br>
+            </p>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        
     </div>
-
-    <div class="container">
-    	<h2>Misc</h2>
-    	<div>
-    		<p>
-    		<br>
-    		<span class="links">
-                <a href="https://blindsights.blogspot.com/">Blog</a>
-                &nbsp;&nbsp;&nbsp;
-                <a href="https://goo.gl/photos/CE8chhuJwTAcZqtL7">Doodles</a>
-                &nbsp;&nbsp;&nbsp;
-                <a href="https://www.youtube.com/playlist?list=PLua4XbbBXzFciVTrYVhZB3Kt7-ZERzzXp">Microcinema</a>
-            </span>
-   			</p>
-    	</div>
-    </div> -->
 
 </body></html>
