--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ a, a:visited { color : #0050e7; }
 .publication .links { position : relative; top : 15px }
 .publication .links a { margin-right : 20px; }
 .codelogo { margin-right : 10px; float : left; border : 0;}
-.code { clear : left; padding-bottom : 10px; vertical-align :middle;} 
+.code { clear : left; padding-bottom : 10px; vertical-align :middle;}
 .code .download a { display : block; margin : 0 15px; float : left;}
 .code strong a { color : #000; }
 .external a { margin : 0 10px; }
@@ -95,7 +95,7 @@ a, a:visited { color : #0050e7; }
 		</p>
 	</div>
 
-    <div class="container">
+    <!-- <div class="container">
         <h2>News</h2>
         <p>
         [2022-07] 2 papers accepted to ECCV 2022 (1 oral).
@@ -115,7 +115,7 @@ a, a:visited { color : #0050e7; }
         <br>
         [2019-07] 1 paper accepted to ICCV 2019 as oral presentation.
         </p>
-    </div>
+    </div> -->
 
     <div class="container">
 		<h2>Preprints</h2>
@@ -148,32 +148,8 @@ a, a:visited { color : #0050e7; }
         <br>
         <br>
         <div class="publication">
-            <img src="./homepage_files/ovsam_logo.png" class="publogo" width="200 px">
-            <p>
-                <strong>
-                   <a href="https://arxiv.org/abs/2401.02955">Open-Vocabulary SAM: Segment and Recognize Twenty-thousand Classes Interactively</a>
-                </strong>
-                <br>
-                <br>
-                Haobo Yuan, Xiangtai Li, <b>Chong Zhou</b>, Yining Li, Kai Chen, Chen Change Loy.
-                <br>
-                <!-- <em>European Conference on Computer Vision (ECCV), 2022 <font color="#e86e14">(Oral)</font> </em> -->
-                <em> arXiv preprint, 2024 </em>
-                <br>
-                <span class="links">
-                     <a href="https://arxiv.org/abs/2401.02955">arXiv</a>
-                     <a href="https://www.mmlab-ntu.com/project/ovsam/">Project Page</a>
-                     <a href="https://github.com/HarborYuan/ovsam">Code</a>
-                </span>
-            </p>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="publication">
             <img src="./homepage_files/unify_logo.png" class="publogo" width="200 px">
-            <p> 
+            <p>
                 <strong>
                     <a href="https://arxiv.org/abs/2309.10713">Interpret Vision Transformers as ConvNets with Dynamic Convolutions</a>
                 </strong>
@@ -201,8 +177,31 @@ a, a:visited { color : #0050e7; }
 		<h2>Publications</h2>
         <br>
         <div class="publication">
+            <img src="./homepage_files/ovsam_logo.png" class="publogo" width="200 px">
+            <p>
+                <strong>
+                   <a href="https://arxiv.org/abs/2401.02955">Open-Vocabulary SAM: Segment and Recognize Twenty-thousand Classes Interactively</a>
+                </strong>
+                <br>
+                <br>
+                Haobo Yuan, Xiangtai Li, <b>Chong Zhou</b>, Yining Li, Kai Chen, Chen Change Loy.
+                <br>
+                <em>European Conference on Computer Vision (ECCV), 2024</em>
+                <br>
+                <span class="links">
+                     <a href="https://arxiv.org/abs/2401.02955">arXiv</a>
+                     <a href="https://www.mmlab-ntu.com/project/ovsam/">Project Page</a>
+                     <a href="https://github.com/HarborYuan/ovsam">Code</a>
+                </span>
+            </p>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="publication">
             <img src="./homepage_files/rubik_logo.png" class="publogo" width="200 px">
-            <p> 
+            <p>
                 <strong>
                     <a href="https://openreview.net/pdf?id=hOOOvOMok5">Rubik's Cube: High-Order Channel Interactions with a Hierarchical Receptive Field</a>
                 </strong>
@@ -225,7 +224,7 @@ a, a:visited { color : #0050e7; }
         <br>
         <div class="publication">
             <img src="./homepage_files/maskclip_logo.jpg" class="publogo" width="200 px">
-            <p> 
+            <p>
                 <strong>
                     <a href="https://arxiv.org/abs/2112.01071">Extract Free Dense Labels from CLIP</a>
                 </strong>
@@ -249,7 +248,7 @@ a, a:visited { color : #0050e7; }
         <br>
         <div class="publication">
             <img src="./homepage_files/pacnet_logo.png" class="publogo" width="200 px">
-            <p> 
+            <p>
                 <strong>
                     <a href="https://www.ecva.net/papers/eccv_2022/papers_ECCV/papers/136940602.pdf">PAC-Net: Highlight Your Video via History Preference Modeling</a>
                 </strong>
@@ -272,7 +271,7 @@ a, a:visited { color : #0050e7; }
         <!-- <h3>2021</h3> -->
         <div class="publication">
             <img src="./homepage_files/noh_logo.png" class="publogo" width="200 px">
-            <p> 
+            <p>
                 <strong>
                     <a href="https://arxiv.org/abs/2007.13376">NON-NMS: Improving Pedestrian Detection by Nearby Objects Hallucination</a>
                 </strong>
@@ -298,7 +297,7 @@ a, a:visited { color : #0050e7; }
         <br>
         <div class="publication">
             <img src="./homepage_files/yolact++_logo.png" class="publogo" width="200 px">
-            <p> 
+            <p>
                 <strong>
                     <a href="https://arxiv.org/abs/1912.06218">YOLACT++: Better Real-time Instance Segmentation</a>
                 </strong>
@@ -323,7 +322,7 @@ a, a:visited { color : #0050e7; }
         <br>
         <div class="publication">
             <img src="./homepage_files/yolact_logo.png" class="publogo" width="200 px">
-            <p> 
+            <p>
                 <strong>
                     <a href="https://arxiv.org/abs/1904.02689">YOLACT: Real-time Instance Segmentation</a>
                 </strong>
@@ -396,7 +395,7 @@ a, a:visited { color : #0050e7; }
         <br>
         <br>
         <br>
-        
+
     </div>
 
 </body></html>
