--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@ a, a:visited { color : #0050e7; }
 	<div class="container">
 		<h2>Short Bio</h2>
 		<p>
-			I am a Ph.D. student at the <a href="https://www.mmlab-ntu.com/">MMLab@NTU</a> advised by Prof. <a href="https://www.mmlab-ntu.com/person/ccloy/">Chen Change Loy</a> and Dr. <a href="https://daibo.info/">Bo Dai</a> (2021-now). Previously, I completed my Master's degree from <a href="https://www.ucdavis.edu/">UC Davis</a> advised by Prof. <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> (2018-2020), and my Bachelor's degree from <a href="https://en.nankai.edu.cn/">Nankai University</a> advised by Prof. <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a> (2014-2018).
-            <!-- I have also spent a year at the Tencent Youtu Lab working as a research intern (2020-2021). -->
+			I am a Ph.D. student at the <a href="https://www.mmlab-ntu.com/">MMLab@NTU</a> advised by Prof. <a href="https://www.mmlab-ntu.com/person/ccloy/">Chen Change Loy</a> and Prof. <a href="https://daibo.info/">Bo Dai</a> (2021-now). Previously, I completed my Master's degree from <a href="https://www.ucdavis.edu/">UC Davis</a> advised by Prof. <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> (2018-2020), and my Bachelor's degree from <a href="https://en.nankai.edu.cn/">Nankai University</a> advised by Prof. <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a> (2014-2018).
 	        <br>
             <br>
 	        I am broadly interested in computer vision and related problems in machine learning. My previous research focuses on instance segmentation and object detection. Currently, I'm particularly interested in foundation model optimization.
@@ -120,6 +119,58 @@ a, a:visited { color : #0050e7; }
 
     <div class="container">
 		<h2>Preprints</h2>
+        <br>
+        <div class="publication">
+            <img src="./homepage_files/edgetam_logo.gif" class="publogo" width="200 px">
+            <p>
+                <strong>
+                   <a href="https://arxiv.org/abs/2501.07256">EdgeTAM: On-Device Track Anything Model</a>
+                </strong>
+                <br>
+                <br>
+                <b>Chong Zhou</b>, Chenchen Zhu, Yunyang Xiong, Saksham Suri, Fanyi Xiao, Lemeng Wu, Raghuraman Krishnamoorthi, Bo Dai, Chen Change Loy, Vikas Chandra, Bilge Soran.
+                <br>
+                <!-- <em>European Conference on Computer Vision (ECCV), 2022 <font color="#e86e14">(Oral)</font> </em> -->
+                <em> arXiv preprint, 2025 </em>
+                <br>
+                <span class="links">
+                     <a href="https://arxiv.org/abs/2501.07256">arXiv</a>
+                     <!-- <a href="https://mmlab-ntu.github.io/project/edgesam/">Project Page</a>
+                     <a href="https://github.com/chongzhou96/EdgeSAM">Code</a>
+                     <a href="https://huggingface.co/spaces/chongzhou/EdgeSAM">Demo</a>
+                     <a href="https://www.youtube.com/watch?v=YYsEQ2vleiE">Video</a> -->
+                </span>
+            </p>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="publication">
+            <img src="./homepage_files/efficienttam_logo.gif" class="publogo" width="200 px">
+            <p>
+                <strong>
+                   <a href="https://arxiv.org/abs/2411.18933">Efficient Track Anything</a>
+                </strong>
+                <br>
+                <br>
+                Yunyang Xiong, <b>Chong Zhou</b>, Xiaoyu Xiang, Lemeng Wu, Chenchen Zhu, Zechun Liu, Saksham Suri, Balakrishnan Varadarajan, Ramya Akula, Forrest Iandola, Raghuraman Krishnamoorthi, Bilge Soran, Vikas Chandra.
+                <br>
+                <!-- <em>European Conference on Computer Vision (ECCV), 2022 <font color="#e86e14">(Oral)</font> </em> -->
+                <em> arXiv preprint, 2024 </em>
+                <br>
+                <span class="links">
+                     <a href="https://arxiv.org/abs/2411.18933">arXiv</a>
+                     <a href="https://yformer.github.io/efficient-track-anything/">Project Page</a>
+                     <a href="https://github.com/yformer/EfficientTAM">Code</a>
+                     <!-- <a href="https://huggingface.co/spaces/chongzhou/EdgeSAM">Demo</a> -->
+                     <a href=https://www.youtube.com/watch?v=SsuDcx4ZiVQ">Video</a>
+                </span>
+            </p>
+        </div>
+        <br>
+        <br>
+        <br>
         <br>
         <div class="publication">
             <img src="./homepage_files/edgesam_logo.jpeg" class="publogo" width="200 px">
@@ -360,7 +411,7 @@ a, a:visited { color : #0050e7; }
                 </strong>
                 <br>
                 <br>
-                <em> July 2024 -  </em>
+                <em> July 2024 - Dec 2024 </em>
                 <br>
             </p>
         </div>
