--- a/index.html
+++ b/index.html
@@ -121,32 +121,6 @@ a, a:visited { color : #0050e7; }
 		<h2>Preprints</h2>
         <br>
         <div class="publication">
-            <img src="./homepage_files/edgetam_logo.gif" class="publogo" width="200 px">
-            <p>
-                <strong>
-                   <a href="https://arxiv.org/abs/2501.07256">EdgeTAM: On-Device Track Anything Model</a>
-                </strong>
-                <br>
-                <br>
-                <b>Chong Zhou</b>, Chenchen Zhu, Yunyang Xiong, Saksham Suri, Fanyi Xiao, Lemeng Wu, Raghuraman Krishnamoorthi, Bo Dai, Chen Change Loy, Vikas Chandra, Bilge Soran.
-                <br>
-                <!-- <em>European Conference on Computer Vision (ECCV), 2022 <font color="#e86e14">(Oral)</font> </em> -->
-                <em> arXiv preprint, 2025 </em>
-                <br>
-                <span class="links">
-                     <a href="https://arxiv.org/abs/2501.07256">arXiv</a>
-                     <!-- <a href="https://mmlab-ntu.github.io/project/edgesam/">Project Page</a>
-                     <a href="https://github.com/chongzhou96/EdgeSAM">Code</a>
-                     <a href="https://huggingface.co/spaces/chongzhou/EdgeSAM">Demo</a>
-                     <a href="https://www.youtube.com/watch?v=YYsEQ2vleiE">Video</a> -->
-                </span>
-            </p>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="publication">
             <img src="./homepage_files/efficienttam_logo.gif" class="publogo" width="200 px">
             <p>
                 <strong>
@@ -227,6 +201,31 @@ a, a:visited { color : #0050e7; }
 
 	<div class="container">
 		<h2>Publications</h2>
+        <br>
+        <div class="publication">
+            <img src="./homepage_files/edgetam_logo.gif" class="publogo" width="200 px">
+            <p>
+                <strong>
+                   <a href="https://arxiv.org/abs/2501.07256">EdgeTAM: On-Device Track Anything Model</a>
+                </strong>
+                <br>
+                <br>
+                <b>Chong Zhou</b>, Chenchen Zhu, Yunyang Xiong, Saksham Suri, Fanyi Xiao, Lemeng Wu, Raghuraman Krishnamoorthi, Bo Dai, Chen Change Loy, Vikas Chandra, Bilge Soran.
+                <br>
+                <em>Conference on Computer Vision and Pattern Recognition (CVPR), 2025 </em>
+                <br>
+                <span class="links">
+                     <a href="https://arxiv.org/abs/2501.07256">arXiv</a>
+                     <!-- <a href="https://mmlab-ntu.github.io/project/edgesam/">Project Page</a>
+                     <a href="https://github.com/chongzhou96/EdgeSAM">Code</a>
+                     <a href="https://huggingface.co/spaces/chongzhou/EdgeSAM">Demo</a>
+                     <a href="https://www.youtube.com/watch?v=YYsEQ2vleiE">Video</a> -->
+                </span>
+            </p>
+        </div>
+        <br>
+        <br>
+        <br>
         <br>
         <div class="publication">
             <img src="./homepage_files/ovsam_logo.png" class="publogo" width="200 px">
