--- a/index.html
+++ b/index.html
@@ -147,33 +147,6 @@ a, a:visited { color : #0050e7; }
         <br>
         <br>
         <div class="publication">
-            <img src="./homepage_files/edgesam_logo.jpeg" class="publogo" width="200 px">
-            <p>
-                <strong>
-                   <a href="https://arxiv.org/abs/2312.06660">EdgeSAM: Prompt-In-the-Loop Distillation for On-Device Deployment of SAM</a>
-                </strong>
-                <br>
-                <br>
-                <b>Chong Zhou</b>, Xiangtai Li, Chen Change Loy*, Bo Dai.
-                <br>(*corresponding author)
-                <br>
-                <!-- <em>European Conference on Computer Vision (ECCV), 2022 <font color="#e86e14">(Oral)</font> </em> -->
-                <em> arXiv preprint, 2023 </em>
-                <br>
-                <span class="links">
-                     <a href="https://arxiv.org/abs/2312.06660">arXiv</a>
-                     <a href="https://mmlab-ntu.github.io/project/edgesam/">Project Page</a>
-                     <a href="https://github.com/chongzhou96/EdgeSAM">Code</a>
-                     <a href="https://huggingface.co/spaces/chongzhou/EdgeSAM">Demo</a>
-                     <a href="https://www.youtube.com/watch?v=YYsEQ2vleiE">Video</a>
-                </span>
-            </p>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="publication">
             <img src="./homepage_files/unify_logo.png" class="publogo" width="200 px">
             <p>
                 <strong>
@@ -216,10 +189,36 @@ a, a:visited { color : #0050e7; }
                 <br>
                 <span class="links">
                      <a href="https://arxiv.org/abs/2501.07256">arXiv</a>
+                     <a href="https://github.com/facebookresearch/EdgeTAM">Code</a>
+                     <a href="https://huggingface.co/spaces/chongzhou/EdgeTAM">Demo</a>
                      <!-- <a href="https://mmlab-ntu.github.io/project/edgesam/">Project Page</a>
+                     <a href="https://www.youtube.com/watch?v=YYsEQ2vleiE">Video</a> -->
+                </span>
+            </p>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="publication">
+            <img src="./homepage_files/edgesam_logo.jpeg" class="publogo" width="200 px">
+            <p>
+                <strong>
+                   <a href="https://arxiv.org/abs/2312.06660">EdgeSAM: Prompt-In-the-Loop Distillation for On-Device Deployment of SAM</a>
+                </strong>
+                <br>
+                <br>
+                <b>Chong Zhou</b>, Xiangtai Li, Chen Change Loy*, Bo Dai.
+                <br>(*corresponding author)
+                <br>
+                <em> International Journal of Computer Vision (IJCV), 2025 (To appear) </em>
+                <br>
+                <span class="links">
+                     <a href="https://arxiv.org/abs/2312.06660">arXiv</a>
+                     <a href="https://mmlab-ntu.github.io/project/edgesam/">Project Page</a>
                      <a href="https://github.com/chongzhou96/EdgeSAM">Code</a>
                      <a href="https://huggingface.co/spaces/chongzhou/EdgeSAM">Demo</a>
-                     <a href="https://www.youtube.com/watch?v=YYsEQ2vleiE">Video</a> -->
+                     <a href="https://www.youtube.com/watch?v=YYsEQ2vleiE">Video</a>
                 </span>
             </p>
         </div>
