--- a/index.html
+++ b/index.html
@@ -62,13 +62,10 @@ a, a:visited { color : #0050e7; }
             <br>
 
 			<p style="line-height:23px;">
-				Ph.D. Student
+				Research Scientist
                 <br>
                 <br>
-                School of Computer Science and Engineering
-                <br>
-                <br>
-                Nanyang Technological University
+                Meta Reality Labs
                 <br>
                 <br>
                 Email: chongzhou1024 at gmail.com
@@ -88,7 +85,10 @@ a, a:visited { color : #0050e7; }
 	<div class="container">
 		<h2>Short Bio</h2>
 		<p>
-			I am a Ph.D. student at the <a href="https://www.mmlab-ntu.com/">MMLab@NTU</a> advised by Prof. <a href="https://www.mmlab-ntu.com/person/ccloy/">Chen Change Loy</a> and Prof. <a href="https://daibo.info/">Bo Dai</a> (2021-now). Previously, I completed my Master's degree from <a href="https://www.ucdavis.edu/">UC Davis</a> advised by Prof. <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> (2018-2020), and my Bachelor's degree from <a href="https://en.nankai.edu.cn/">Nankai University</a> advised by Prof. <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a> (2014-2018).
+            I'm a research scientist at Meta Reality Labs working on efficient foundation models.
+            <br>
+            <br>
+			I was a Ph.D. student at the <a href="https://www.mmlab-ntu.com/">MMLab@NTU</a> advised by Prof. <a href="https://www.mmlab-ntu.com/person/ccloy/">Chen Change Loy</a> and Prof. <a href="https://daibo.info/">Bo Dai</a> (2021-2025). Previously, I completed my Master's degree from <a href="https://www.ucdavis.edu/">UC Davis</a> advised by Prof. <a href="https://web.cs.ucdavis.edu/~yjlee/">Yong Jae Lee</a> (2018-2020), and my Bachelor's degree from <a href="https://en.nankai.edu.cn/">Nankai University</a> advised by Prof. <a href="https://mmcheng.net/cmm/">Ming-Ming Cheng</a> (2014-2018).
 	        <br>
             <br>
 	        I am broadly interested in computer vision and related problems in machine learning. My previous research focuses on instance segmentation and object detection. Currently, I'm particularly interested in foundation model optimization.
@@ -405,7 +405,21 @@ a, a:visited { color : #0050e7; }
             <img src="./homepage_files/meta_logo.png" class="publogo" width="200 px">
             <p>
                 <strong>
-                    Research Scientist Intern @ Meta AI
+                    Research Scientist @ Meta
+                </strong>
+                <br>
+                <br>
+                <em> Apr 2025 - Now </em>
+                <br>
+            </p>
+        </div>
+        <br>
+        <br>
+        <div class="publication">
+            <img src="./homepage_files/meta_logo.png" class="publogo" width="200 px">
+            <p>
+                <strong>
+                    Research Scientist Intern @ Meta
                 </strong>
                 <br>
                 <br>
