--- a/index.html
+++ b/index.html
@@ -121,32 +121,6 @@ a, a:visited { color : #0050e7; }
 		<h2>Preprints</h2>
         <br>
         <div class="publication">
-            <img src="./homepage_files/efficienttam_logo.gif" class="publogo" width="200 px">
-            <p>
-                <strong>
-                   <a href="https://arxiv.org/abs/2411.18933">Efficient Track Anything</a>
-                </strong>
-                <br>
-                <br>
-                Yunyang Xiong, <b>Chong Zhou</b>, Xiaoyu Xiang, Lemeng Wu, Chenchen Zhu, Zechun Liu, Saksham Suri, Balakrishnan Varadarajan, Ramya Akula, Forrest Iandola, Raghuraman Krishnamoorthi, Bilge Soran, Vikas Chandra.
-                <br>
-                <!-- <em>European Conference on Computer Vision (ECCV), 2022 <font color="#e86e14">(Oral)</font> </em> -->
-                <em> arXiv preprint, 2024 </em>
-                <br>
-                <span class="links">
-                     <a href="https://arxiv.org/abs/2411.18933">arXiv</a>
-                     <a href="https://yformer.github.io/efficient-track-anything/">Project Page</a>
-                     <a href="https://github.com/yformer/EfficientTAM">Code</a>
-                     <!-- <a href="https://huggingface.co/spaces/chongzhou/EdgeSAM">Demo</a> -->
-                     <a href=https://www.youtube.com/watch?v=SsuDcx4ZiVQ">Video</a>
-                </span>
-            </p>
-        </div>
-        <br>
-        <br>
-        <br>
-        <br>
-        <div class="publication">
             <img src="./homepage_files/unify_logo.png" class="publogo" width="200 px">
             <p>
                 <strong>
@@ -193,6 +167,30 @@ a, a:visited { color : #0050e7; }
                      <a href="https://huggingface.co/spaces/facebook/EdgeTAM">Demo</a>
                      <!-- <a href="https://mmlab-ntu.github.io/project/edgesam/">Project Page</a>
                      <a href="https://www.youtube.com/watch?v=YYsEQ2vleiE">Video</a> -->
+                </span>
+            </p>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="publication">
+            <img src="./homepage_files/efficienttam_logo.gif" class="publogo" width="200 px">
+            <p>
+                <strong>
+                   <a href="https://arxiv.org/abs/2411.18933">Efficient Track Anything</a>
+                </strong>
+                <br>
+                <br>
+                Yunyang Xiong, <b>Chong Zhou</b>, Xiaoyu Xiang, Lemeng Wu, Chenchen Zhu, Zechun Liu, Saksham Suri, Balakrishnan Varadarajan, Ramya Akula, Forrest Iandola, Raghuraman Krishnamoorthi, Bilge Soran, Vikas Chandra.
+                <br>
+                <em>International Conference on Computer Vision (ICCV), 2025 </em>
+                <br>
+                <span class="links">
+                     <a href="https://arxiv.org/abs/2411.18933">arXiv</a>
+                     <a href="https://yformer.github.io/efficient-track-anything/">Project Page</a>
+                     <a href="https://github.com/yformer/EfficientTAM">Code</a>
+                     <a href=https://www.youtube.com/watch?v=SsuDcx4ZiVQ">Video</a>
                 </span>
             </p>
         </div>
