--- a/index.html
+++ b/index.html
@@ -121,6 +121,31 @@ a, a:visited { color : #0050e7; }
 		<h2>Preprints</h2>
         <br>
         <div class="publication">
+            <img src="./homepage_files/distill_register_logo.png" class="publogo" width="200 px">
+            <p>
+                <strong>
+                    <a href="https://arxiv.org/abs/2505.21501">Vision Transformers with Self-Distilled Registers</a>
+                </strong>
+                <br>
+                <br>
+                Yinjie Chen*, Zipeng Yan*, <b>Chong Zhou</b>, Bo Dai, Andrew F. Luo.
+                <br>(*equal contribution)
+                <br>
+                <!-- <em>European Conference on Computer Vision (ECCV), 2022 <font color="#e86e14">(Oral)</font> </em> -->
+                <em> arXiv preprint, 2025 </em>
+                <br>
+                <span class="links">
+                    <a href="https://arxiv.org/abs/2505.21501">arXiv</a>
+                    <!-- <a href="https://www.mmlab-ntu.com/project/maskclip/index.html">Project Page</a> -->
+                    <!-- <a href="https://github.com/chongzhou96/MaskCLIP">Code</a> -->
+                </span>
+            </p>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="publication">
             <img src="./homepage_files/unify_logo.png" class="publogo" width="200 px">
             <p>
                 <strong>
