--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ a, a:visited { color : #0050e7; }
                 <b>Chong Zhou</b>, Xiangtai Li, Chen Change Loy*, Bo Dai.
                 <br>(*corresponding author)
                 <br>
-                <em> International Journal of Computer Vision (IJCV), 2025 (To appear) </em>
+                <em> International Journal of Computer Vision (IJCV), 2025 </em>
                 <br>
                 <span class="links">
                      <a href="https://arxiv.org/abs/2312.06660">arXiv</a>
