--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ a, a:visited { color : #0050e7; }
         </p>
     </div> -->
 
-    <div class="container">
+    <!-- <div class="container">
 		<h2>Preprints</h2>
         <br>
         <div class="publication">
@@ -130,13 +130,10 @@ a, a:visited { color : #0050e7; }
                 <br>
                 <b>Chong Zhou</b>, Chen Change Loy, Bo Dai.
                 <br>
-                <!-- <em>European Conference on Computer Vision (ECCV), 2022 <font color="#e86e14">(Oral)</font> </em> -->
                 <em> arXiv preprint, 2023 </em>
                 <br>
                 <span class="links">
                     <a href="https://arxiv.org/abs/2309.10713">arXiv</a>
-                    <!-- <a href="https://www.mmlab-ntu.com/project/maskclip/index.html">Project Page</a> -->
-                    <!-- <a href="https://github.com/chongzhou96/MaskCLIP">Code</a> -->
                 </span>
             </p>
         </div>
@@ -144,7 +141,7 @@ a, a:visited { color : #0050e7; }
         <br>
         <br>
         <br>
-    </div>
+    </div> -->
 
 	<div class="container">
 		<h2>Publications</h2>
@@ -264,6 +261,27 @@ a, a:visited { color : #0050e7; }
                      <a href="https://arxiv.org/abs/2401.02955">arXiv</a>
                      <a href="https://www.mmlab-ntu.com/project/ovsam/">Project Page</a>
                      <a href="https://github.com/HarborYuan/ovsam">Code</a>
+                </span>
+            </p>
+        </div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <div class="publication">
+            <img src="./homepage_files/unify_logo.png" class="publogo" width="200 px">
+            <p>
+                <strong>
+                    <a href="https://arxiv.org/abs/2309.10713">Interpret Vision Transformers as ConvNets with Dynamic Convolutions</a>
+                </strong>
+                <br>
+                <br>
+                <b>Chong Zhou</b>, Chen Change Loy, Bo Dai.
+                <br>
+                <em> arXiv preprint, 2023 </em>
+                <br>
+                <span class="links">
+                    <a href="https://arxiv.org/abs/2309.10713">arXiv</a>
                 </span>
             </p>
         </div>
